ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: spring.local    # Dummy domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic-service  
            port:
              number: 80
